2000-08-29  Eric Melski  <ericm@ajubasolutions.com>

	* library/tkfbox.tcl (::tk::dialog::file::Update): Corrected
	handling of multi-pattern filters (eg, "* *.*"), which was broken
	by the getOpenFile performance patches applied earlier.

2000-08-24  Eric Melski  <ericm@ajubasolutions.com>

	* doc/toplevel.n: 
	* doc/spinbox.n: 
	* doc/scrollbar.n: 
	* doc/scale.n: 
	* doc/menubutton.n: 
	* doc/menu.n: 
	* doc/listbox.n: 
	* doc/entry.n: 
	* doc/frame.n: 
	* doc/message.n: 
	* doc/checkbutton.n: 
	* doc/radiobutton.n: 
	* doc/button.n: 
	* doc/label.n: 
	* doc/canvas.n: 
	* doc/text.n: Fixed Standard Options section to make best use of
	new tab settings in man.macros.

2000-08-24  Mo DeJong  <mdejong@redhat.com>

	* unix/README: Update to account for removal of --enable-gcc.
	* unix/configure.in:
	* unix/tcl.m4 (SC_ENABLE_GCC): Remove --enable-gcc option.
	* win/configure.in: 
	* win/tcl.m4 (SC_ENABLE_GCC): Remove --enable-gcc option.
	Remove quick hack that provided cross compile support for
	windows builds.

2000-08-23  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkButton.c (ButtonTextVarProc): reversed change below,
	it was not correct.

2000-08-22  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkButton.c (ButtonTextVarProc): changed order of
	incr/decr of new value object, in case they are equal.

2000-08-18  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tkImgPhoto.c (ImgPhotoGet): Removed redundant call to
	DitherInstance; this call was formerly being made from
	ImgPhotoGet->ImgPhotoConfigureInstance->DitherInstance, and
	ImgPhotoGet->DitherInstance.  The second call was removed.

2000-08-10  Jeff Hobbs  <hobbs@scriptics.com>

	* doc/SetOptions.3: added missing ')'.

2000-08-09  Eric Melski  <ericm@ajubasolutions.com>

	* doc/SetOptions.3: Updated documentation to reflect support for
	TK_OPTION_NULL_OK for TK_OPTION_DOUBLE and TK_OPTION_PIXELS.

	* generic/tkConfig.c: Added for TK_OPTION_NULL_OK support for
	TK_OPTION_DOUBLE and TK_OPTION_PIXELS.
